kubernetes/apps/base/penpot/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: penpot
  namespace: penpot
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`penpot.local`)
      kind: Rule
      services:
        - name: penpot
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
  tls:
    secretName: penpot-tls
